minor overflow fix in header

--- a/src/Components/header/header.scss
+++ b/src/Components/header/header.scss
@@ -157,7 +157,7 @@ header{
 /* Sticky Header Style */	
 /* ---------------------------------------- */ 
 .sticky-header{
-	padding-top: 100px;
+	// padding-top: 100px;
 	header{
 	animation: navhide 1s ease-out forwards;
 
